--- a/app/src/main/res/layout/activity_add_tract.xml
+++ b/app/src/main/res/layout/activity_add_tract.xml
@@ -10,9 +10,11 @@
 
     <TextView
         android:id="@+id/txtViewNameArtistTrack"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nyeh"
+        android:textSize="21dp"
+        android:textStyle="bold"
         android:textAlignment="center"/>
 
     <EditText
@@ -24,25 +26,29 @@
     <SeekBar
         android:id="@+id/seekbarRating"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"/>
 
     <Button
         android:id="@+id/btnTambah"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tambah"/>
+        android:text="Tambah"
+        android:layout_marginTop="14dp"/>
 
     <TextView
         android:id="@+id/txtArtistTrack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Artists"
-        android:textAlignment="center"/>
+        android:text="Track"
+        android:textAlignment="center"
+        android:layout_marginTop="14dp"/>
 
     <ListView
         android:id="@+id/listViewTrack"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="21dp">
 
     </ListView>
 
